--- a/learning.cabal
+++ b/learning.cabal
@@ -21,7 +21,6 @@ library
   -- other-modules:       
   -- other-extensions:    
   build-depends:
-    base >=4.8 && <4.9,
-    containers
+    base >=4.8 && <4.9
   hs-source-dirs:      src
   default-language:    Haskell2010
