--- a/learning.cabal
+++ b/learning.cabal
@@ -26,11 +26,12 @@ library
   hs-source-dirs:   src
   default-language: Haskell2010
 
-  ghc-options: -fllvm -O2 -flate-dmd-anal -fexpose-all-unfoldings -optlo-O3 -optlc-O3
+  ghc-options: -O2 -flate-dmd-anal -fexpose-all-unfoldings -optlo-O3 -optlc-O3
 
 executable test
   build-depends:
     base >=4.8 && <4.9,
+    parsec,
     text,
     learning
 
