Large improvements to DecisionTree
Now when it can't find any perfect decisions, it
goes to the most similar branch.

Also, add an example that correctly classifies 97% of
300 cancer patients as benign/malignant after being
trained on 300 examples.
Data used: https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/

--- a/learning.cabal
+++ b/learning.cabal
@@ -21,6 +21,7 @@ library
     base >=4.8 && <4.9,
     random,
     bytestring, text, vector,
+    parsec,
     deepseq,
     zlib
   hs-source-dirs:   src
